[package]
name = "apexsky_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.81"
bevy = { version = "0.14.0", features = ["wayland"] }
bevy_async_task = "0.2.0"
bevy_egui = "0.28.0"
bevy_health_bar3d = "3.3.0"
chrono = "0.4.38"
#console-subscriber = "0.1.5"
fyrox-sound = "0.35.0"
rand = "0.8.5"
indexmap = "2.2.6"
instant = "0.1.13"
ndarray = "0.15.6"
obfstr = "0.4.3"
once_cell = "1.19.0"
parking_lot = { version = "0.12.3", features = ["nightly"] }
prost = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
tonic = { version = "0.12.0", default-features = false, features = ["prost", "codegen", "channel"] }
tonic-web-wasm-client = { version = "0.5.1", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
tracing-appender = { version = "0.2.3", optional = true }
tracing-web = { version = "0.1.3", optional = true }
url = "2.5.2"
wasm-bindgen-futures = { version = "0.4.42", optional = true }

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[build-dependencies]
tonic-build = "0.12.0"

[features]
default = ["native"]
native = ["tokio/full", "tonic/transport", "tonic/zstd", "tracing-appender"]
web-wasm = ["tonic-web-wasm-client", "tracing-web", "instant/wasm-bindgen", "wasm-bindgen-futures"]
web-wasm-webgpu = ["web-wasm", "bevy/webgpu"]
web-wasm-webgl = ["web-wasm", "bevy/webgl2"]
