[package]
name = "apexsky_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.82"
bevy = { version = "0.14.2", features = ["wayland"] }
bevy_async_task = "0.2.0"
bevy_egui = "0.29.0"
bevy_health_bar3d = "3.3.0"
chrono = "0.4.38"
#console-subscriber = "0.4.0"
dirs = "5.0.1"
fyrox-sound = "0.35.0"
rand = "0.8.5"
indexmap = "2.5.0"
instant = "0.1.13"
ndarray = "0.16.1"
obfstr = "0.4.3"
once_cell = "1.20.1"
parking_lot = { version = "0.12.3", features = ["nightly"] }
prost = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = { version = "0.6.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
tracing-appender = { version = "0.2.3", optional = true }
tracing-web = { version = "0.1.3", optional = true }
url = "2.5.2"
wasm-bindgen-futures = { version = "0.4.43", optional = true }

[target.'cfg(unix)'.dependencies]
uzers = "0.12.1"

[build-dependencies]
tonic-build = "0.12.2"

[features]
default = ["native"]
native = ["tokio/full", "tonic/transport", "tonic/zstd", "tracing-appender"]
web-wasm = ["tonic-web-wasm-client", "tracing-web", "instant/wasm-bindgen", "wasm-bindgen-futures"]
web-wasm-webgpu = ["web-wasm", "bevy/webgpu"]
web-wasm-webgl = ["web-wasm", "bevy/webgl2"]
