[package]
name = "skyapex-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
lazy_static = "1.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap", "preserve_order"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.33"
wat = "1.0"
wasmedge-sdk = { version = "0.13.2", features = ["static", "standalone", "wasi_nn"], optional = true }
wasmer = { version = "4.2.5", optional = true }
wasmer-wasix = { version = "0.18.0", optional = true}
skyapex-derive = { path = "../skyapex-derive" }
ctrlc = "3.4.2"
obfstr = "0.4.3"
paste = "1.0.14"
include-flate = "0.3.0"

[features]
default = ["wasmer"]
wasmedge = ["dep:wasmedge-sdk"]
wasmer = ["dep:wasmer", "dep:wasmer-wasix"]
