[package]
name = "skyapex-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.159"
anyhow = "1.0"
chrono = "0.4"
include-flate = "0.3.0"
once_cell = "1.20.1"
obfstr = "0.4.3"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
wat = "1"
wasmedge-sdk = { version = "0.14.0", features = ["wasi_nn"], optional = true }
#wasmer = { version = "4.3.5", optional = true }
#wasmer-wasix = { version = "0.25.0", optional = true }
wasmtime = { version = "25.0.1", optional = true }
wasmtime-wasi = { version = "25.0.1", optional = true }
skyapex-derive = { path = "../skyapex-derive" }


[features]
default = ["wasmtime"]
wasmedge = ["dep:wasmedge-sdk"]
#wasmer = ["dep:wasmer", "dep:wasmer-wasix"]
wasmer = []
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
